--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^2.7.0"
+    "mongoose": "^8.3.4",
+    "node-fetch": "^2.7.0",
+    "snoowrap": "^1.23.0"
   }
 }
