--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.3.4",
     "node-fetch": "^2.7.0",
-    "snoowrap": "^1.23.0"
+    "snoowrap": "^1.23.0",
+    "vite-express": "^0.16.0"
   }
 }
