--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,18 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
     "mongoose": "^8.3.4",
-    "node-fetch": "^2.7.0",
-    "snoowrap": "^1.23.0",
-    "vite-express": "^0.16.0"
+    "snoowrap": "^1.23.0"
   }
 }
