--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.3.4",
     "snoowrap": "^1.23.0"
   }
